[tool.poetry]
name = "football-prediction"
version = "0.1.0"
description = "Make football score prediction using multiple methods."
authors = ["kevinl75 <kevin.letupe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
pandas = "^2.2.2"
numpy = "^2.0.1"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
